# rs-trading-charts

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
bindings/: package-lock.json  package.json
bindings/src/: index.mjs
example/: Cargo.toml  README.md  Trunk.toml  index.html
example/data/: data1.json  data2.json
example/src/: dataset.rs  example.rs  lib.rs  main.rs
trading-charts/: Cargo.toml  build.rs
trading-charts/bindings/: package-lock.json  package.json
trading-charts/bindings/builder/: build.mjs
trading-charts/bindings/src/: index.mjs
trading-charts/src/: bindings.rs  chart.rs  console.rs  error.rs  lib.rs  panel.rs
trading-charts/src/bindings/: binding.rs  error.rs  js.rs  mod.rs
trading-charts/src/data/: candle.rs  candlestick.rs  events.rs  marker.rs  marker_type.rs  mod.rs  series.rs
trading-charts/src/data/options/: background.rs  flagable_options.rs  handle_scroll.rs  kinetic_scroll.rs  layout.rs  line_style.rs  line_width.rs  mod.rs  options.rs  price_line_source.rs  time_scale.rs
trading-charts/src/data/options/background/: background.rs  mod.rs  solid_color.rs  vertical_gradient_color.rs
trading-charts/src/data/options/background_options/: mod.rs  solid_color.rs
trading-charts/src/data/options/cross_hair/: cross_hair.rs  line_options.rs  mod.rs  mode.rs
trading-charts/src/data/options/grid/: grid.rs  line_options.rs  mod.rs
trading-charts/src/data/options/handle_scale/: axis_double_click.rs  axis_pressed_mouse_move.rs  handle_scale.rs  mod.rs
trading-charts/src/data/options/layout/: color_space.rs  mod.rs  options.rs  panes.rs
trading-charts/src/data/options/overlay_price_scale/: margins.rs  mod.rs  mode.rs  price_scale.rs
trading-charts/src/data/options/price_scale/: margins.rs  mod.rs  mode.rs  price_scale.rs
trading-charts/src/data/options/tracking_mode/: exit_mode.rs  mod.rs  tracking_mode.rs
trading-charts/src/data/timestamp/: mod.rs  parse_str.rs  timestamp.rs
trading-charts/src/series/: mod.rs
trading-charts/src/series/candlesticks/: component.rs  mod.rs  options.rs
wasmbind-macro/: Cargo.toml  README.md
wasmbind-macro/src/: lib.rs
