[workspace]
resolver = "2"
members = ["trading-charts", "wasmbind-macro", "example"]
default-members = ["trading-charts", "wasmbind-macro"]

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
description = "Rust binding of Lightweight Charts for Leptos"
repository = "https://github.com/corebreaker/rs-trading-charts"
documentation = "https://docs.rs/trading-charts/"
readme = "README.md"
license = "MIT"
keywords = [
    "leptos",
]

categories = [
    "finance",
    "web-programming",
    "wasm",
]

[workspace.metadata.scripts]
fmt = "cargo +nightly fmt --all"

[workspace.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
