[workspace]
resolver = "3"
members = ["trading-charts", "wasmbind-macro", "example"]
default-members = ["trading-charts", "wasmbind-macro"]

[workspace.package]
version = "0.1.14"
edition = "2021"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
description = "Rust binding of Lightweight Charts for Leptos"
repository = "https://github.com/corebreaker/rs-trading-charts"
documentation = "https://docs.rs/trading-charts/"
readme = "README.md"
license = "MIT"
keywords = [
    "leptos",
]

categories = [
    "finance",
    "web-programming",
    "wasm",
]

# Pour exécuter ces commandes avec `cargo run-script`, il faut d'abord l'installer : `cargo install cargo-run-script`
[workspace.metadata.scripts]
fmt = "cargo +nightly fmt --all"
gc = "cargo sweep -r -t 10 ."

[workspace.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
emitix = { version = "1.1", features = ["leptos"] }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
