[package]
name = "trading-charts-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

charts = { path = "../trading-charts", package = "trading-charts" }

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
emitix = { workspace = true }
leptos = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
