[package]
name = "trading-charts"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
num-traits = "0.2"

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
