[package]
name = "trading-charts"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gloo-console = "0.3"
chrono = { version = "0.4.38", features = ["alloc", "serde", "wasmbind"] }
wasmbind-macro = { version = "0.1", path = "../wasmbind-macro", package = "wasmbind-js-file-macro" }

js-sys = { workspace = true }
leptos = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[build-dependencies]
npm_rs = "1.0"
log = { workspace = true }
